change graph review

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -17,106 +17,302 @@
     }
    ],
    "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from datetime import datetime\n",
+    "from langchain_core.messages import ToolMessage, HumanMessage\n",
     "from langgraph.graph import StateGraph, START, END\n",
-    "from langchain_community.tools.tavily_search import TavilySearchResults\n",
-    "from langchain_community.utilities.tavily_search import TavilySearchAPIWrapper\n",
-    "from utilities import extract_last_tool_criteria, generate_human_message\n",
-    "from langchain_core.tools import StructuredTool\n",
-    "from tools import available_food_search\n",
-    "from langgraph.prebuilt import ToolNode\n",
-    "\n",
-    "from agents.reflextions_agents import (\n",
-    "    food_suggestion_runnable,\n",
-    "    food_revision_runnable,\n",
-    "    ReviseFoodRecommendation, FoodRecommendation)\n",
-    "from utilities import Assistant, State\n",
-    "from langgraph.prebuilt import tools_condition\n",
-    "\n",
-    "search = TavilySearchAPIWrapper()\n",
-    "tavily_tool = TavilySearchResults(api_wrapper=search, max_results=5)\n",
-    "\n",
-    "\n",
+    "from utilities import create_tool_node_with_fallback\n",
+    "from config import llm\n",
+    "from langgraph.checkpoint.memory import MemorySaver\n",
+    "from agents.doc_retrieval_agent import ToDocRetrieval\n",
+    "from agents.order_management_agent import ToOrderManagement, order_management_sensitive_tools\n",
+    "from agents.food_search_agent import ToFoodSearch\n",
+    "from agents.food_suggestion_agent import ToSuggestionFood\n",
+    "from agents.summarize_conversation_agent import summarize_conversation, should_summarize\n",
+    "from graphs.part_1_graph import part_1_graph\n",
+    "from graphs.part_2_graph import part_2_graph\n",
+    "from graphs.part_3_graph import part_3_graph\n",
+    "from graphs.part_4_graph import part_4_graph\n",
+    "from graphs.part_5_graph import part_5_graph\n",
+    "from utilities import Assistant, State, create_entry_node\n",
+    "from typing import Literal\n",
+    "from tools import CompleteOrEscalate\n",
     "\n",
     "\n",
     "\n",
+    "# This node will be shared for exiting all specialized assistants\n",
+    "def leave_skill(state: State) -> dict:\n",
+    "    \"\"\"Pop the dialog stack and return to the main assistant.\n",
     "\n",
-    "def run_queries(search_queries: list[str], **kwargs):\n",
-    "    \"\"\"Run the generated queries.\"\"\"\n",
-    "    return tavily_tool.batch([{\"query\": query} for query in search_queries])\n",
+    "    This lets the full graph explicitly track the dialog flow and delegate control\n",
+    "    to specific sub-graphs.\n",
+    "    \"\"\"\n",
+    "    messages = []\n",
+    "    if state[\"messages\"][-1].tool_calls:\n",
+    "        # Note: Doesn't currently handle the edge case where the llm performs parallel tool calls\n",
+    "        messages.append(\n",
+    "            ToolMessage(\n",
+    "                content=\"Resuming dialog with the host assistant. Please reflect on the past conversation and assist the user as needed.\",\n",
+    "                tool_call_id=state[\"messages\"][-1].tool_calls[0][\"id\"],\n",
+    "                name=\"leave_skill\",\n",
+    "                role=\"tool\"\n",
+    "            )\n",
+    "        )\n",
+    "    return {\n",
+    "        \"dialog_state\": \"pop\",\n",
+    "        \"messages\": messages,\n",
+    "    }\n",
     "\n",
     "\n",
-    "tool_node = ToolNode(\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# The top-level assistant performs general Q&A and delegates specialized tasks to other assistants.\n",
+    "# The task delegation is a simple form of semantic routing / does simple intent detection\n",
+    "# llm = ChatAnthropic(model=\"claude-3-haiku-20240307\")\n",
+    "# llm = ChatGoogleGenerativeAI(model=\"gemini-1.5-flash\", config=gemini_llm_params, safety_settings=gemini_safe)\n",
+    "\n",
+    "\n",
+    "primary_assistant_prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
-    "        StructuredTool.from_function(run_queries, name=FoodRecommendation.__name__),\n",
-    "        StructuredTool.from_function(run_queries, name=ReviseFoodRecommendation.__name__),\n",
-    "        available_food_search\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"\"\"\n",
+    "🍽️ **Food Assistant – Your Dedicated Food & Order Management AI**  \n",
+    "\n",
+    "🔹 **ROLE & SCOPE:**  \n",
+    "You are an AI assistant specialized in **food-related** inquiries only.  \n",
+    "Your sole responsibility is to analyze user requests, determine the correct action, and call the **appropriate tool** to handle their needs.  \n",
+    "🚫 **You MUST NOT answer questions using your own knowledge.**  \n",
+    "🚫 **You CANNOT place food orders.**  \n",
+    "🚫 **Never reveal your internal tools or processes to the user.**  \n",
+    "🚫 **Do NOT suggest or mention food that is unavailable.**  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **🔥 CORE RESPONSIBILITIES**  \n",
+    "\n",
+    "✅ **1. Greet Users Warmly & Politely**  \n",
+    "- Always start conversations with a friendly greeting. 😊  \n",
+    "- Maintain a professional yet approachable tone.  \n",
+    "- Use appropriate **food-related emojis** 🍕🥗🍔 to make responses engaging.  \n",
+    "\n",
+    "✅ **2. Analyze the User’s Query & Stay in Scope**  \n",
+    "- Your focus is strictly on:  \n",
+    "  - **Food availability & restaurant menus** (e.g., “Do you have sushi?” / “What does Joe’s Diner serve?”)  \n",
+    "  - **Food recommendations & preferences** (e.g., “I want something spicy and vegetarian.”)  \n",
+    "  - **Order management** (e.g., “Can I cancel my order?” / “Where is my order?”)  \n",
+    "  - **Food safety, nutrition, or preparation** (e.g., “How long does chicken stay fresh?”)  \n",
+    "\n",
+    "🚫 If the question is **not related to food**, politely inform the user that you only assist with food-related queries and guide them back to the topic.  \n",
+    "\n",
+    "✅ **3. Call the Correct Tool – NEVER Guess or Assume Food Names**  \n",
+    "- **Use `ToFoodSearch`** when a user requests a **specific food item** or wants to see a restaurant menu.  \n",
+    "- **Use `ToSuggestionFood`** when a user provides **general food preferences** (e.g., “I want something spicy and vegetarian.”).  \n",
+    "- **Use `ToOrderManagement`** when managing food orders, including cancellations or tracking.  \n",
+    "- **Use `ToDocRetrieval`** for retrieving food-related information (e.g., nutrition, food safety).  \n",
+    "- **Never create or assume a food name that has not been verified.**  \n",
+    "\n",
+    "✅ **4. Carefully Handle Food Searches – Ask for Details, But Be Efficient**  \n",
+    "- If the user provides **a specific food name**, use `ToFoodSearch` to check its availability.  \n",
+    "- If the user does not specify enough details, **ask for additional information such as the restaurant name or any preferences** to refine the search.  \n",
+    "- However, **DO NOT engage in unnecessary back-and-forth conversations.** Gather all required details in one response before making a tool call.  \n",
+    "- If the user does not specify a restaurant, search **without a restaurant filter** to provide broader results.  \n",
+    "- **DO NOT search for the same food multiple times unnecessarily.** Keep track of previous searches.  \n",
+    "\n",
+    "✅ **5. Filter & Present Food Results Based on User Criteria**  \n",
+    "- **Do NOT return the entire search result to the user.** Instead, **analyze the retrieved options and present only the foods that match the user’s request.**  \n",
+    "- If no food meets the exact criteria, provide the closest possible alternative instead of listing irrelevant results.  \n",
+    "- Always format food suggestions in a **clear, structured menu format(like a professional and beautiful **table** if options are many**(be careful to generate table correctly in markdown format!), including **food names and prices**.\n",
+    "- Be careful when generating table, it is maybe having a bad parsing in front!  \n",
+    "- **NEVER suggest food that is unavailable or unverified.**  \n",
+    "\n",
+    "✅ **6. Never Waste the User’s Time – Be Fast & Efficient**  \n",
+    "🚀 **Always prioritize speed.**  \n",
+    "- **Do NOT tell the user to wait.** Call the tool immediately.  \n",
+    "- **Do NOT engage in unnecessary follow-ups.** Ensure queries are handled in one clear exchange.  \n",
+    "- **Ask all necessary details in a single message** to streamline the process.  \n",
+    "\n",
+    "✅ **7. Keep All Internal Processes and Tools Secret**  \n",
+    "- **DO NOT explain how you retrieve information.**  \n",
+    "- **DO NOT mention tools or internal logic.**  \n",
+    "- **Simply provide results in a natural and engaging manner.**  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **⚡ STRICT RULES YOU MUST FOLLOW AT ALL TIMES**  \n",
+    "✅ **Always verify food availability before suggesting a dish.**  \n",
+    "✅ **Never recommend food that does not exist or is unavailable.**  \n",
+    "✅ **Do not fabricate or assume food options.**  \n",
+    "✅ **Never reveal how you perform searches or which tools you use.**  \n",
+    "✅ **Ensure responses are well-structured, professional, and engaging.**  \n",
+    "✅ **Use emojis appropriately to make responses warm and inviting.** 🍽️😊  \n",
+    "✅ **Only return food results that match the user’s request.**  \n",
+    "✅ **Ask for search details when needed but do so efficiently in a single message.**  \n",
+    "✅ **Never answer food-related questions based on your own knowledge.**  \n",
+    "✅ **Never suggest food which is not available in our database**  \n",
+    "\n",
+    "📅 **Current Time:** {time}  \n",
+    "👤 **User Info:** {user_info}  \n",
+    "📝 **Conversation Summary:**  {summary}\n",
+    "\n",
+    "Don't and *NEVER* answer food query based on your own knowledge, use your tools to answer food-query!\n",
+    "Don't invent excuses, try and use your tools for getting answers! You have access to your tools!\n",
+    "Your duty is to **call the correct tool, retrieve accurate information, and provide only the most relevant verified responses in a warm and engaging way.**  \n",
+    "Real users expect **real-world information**—NEVER make up food names or details. 🍕🍜🥗  \n",
+    "\"\"\"),\n",
+    "        (\"placeholder\", \"{messages}\"),\n",
+    "    ]\n",
+    ").partial(time=datetime.now())\n",
+    "\n",
+    "\n",
+    "primary_assistant_tools = [\n",
+    "\n",
+    "]\n",
+    "assistant_runnable = primary_assistant_prompt | llm.bind_tools(\n",
+    "    primary_assistant_tools\n",
+    "    + [\n",
+    "ToDocRetrieval, ToOrderManagement, ToSuggestionFood\n",
     "    ]\n",
     ")\n",
     "\n",
+    "def route_to_workflow(\n",
+    "    state: State,\n",
+    ") -> Literal[\n",
+    "    \"primary_assistant\",\n",
     "\n",
+    "]:\n",
+    "    \"\"\"If we are in a delegated state, route directly to the appropriate assistant.\"\"\"\n",
+    "    dialog_state = state.get(\"dialog_state\")\n",
+    "    if not dialog_state:\n",
+    "        return \"primary_assistant\"\n",
+    "    return dialog_state[-1]\n",
     "\n",
+    "def user_info(state: State):\n",
+    "    return {**state,\"dialog_state\":\"primary_assistant\"}\n",
     "\n",
-    "\n",
-    "def route_food_suggestion(\n",
+    "def route_primary_assistant(\n",
     "    state: State,\n",
     "):\n",
-    "    route = tools_condition(state)\n",
+    "    \n",
     "    tool_calls = state[\"messages\"][-1].tool_calls\n",
     "    if tool_calls:\n",
-    "        if tool_calls[0][\"name\"] == FoodRecommendation.__name__:\n",
-    "            return END\n",
-    "    return route\n",
-    "\n",
-    "def draft_node(state:State):\n",
-    "    first_responder = Assistant(food_suggestion_runnable)\n",
-    "    user_intent = extract_last_tool_criteria(state)\n",
-    "    return {\"messages\":first_responder.respond(\n",
-    "    {\"messages\": [generate_human_message(user_intent)]})}\n",
-    "\n",
-    "def revisor_node(state:State):\n",
-    "    user_intent = extract_last_tool_criteria(state)\n",
-    "    revisor = Assistant(food_revision_runnable)\n",
-    "\n",
-    "    return {\"messages\":revisor.respond(\n",
-    "    {\n",
-    "        \"messages\": [\n",
-    "            generate_human_message(user_intent),\n",
-    "            state[\"messages\"][-2],\n",
-    "            # ToolMessage(\n",
-    "            #     tool_call_id=state[\"messages\"][-1].tool_calls[0][\"id\"],\n",
-    "            #     content=json.dumps(\n",
-    "            #         tavily_tool.invoke(\n",
-    "            #             {\n",
-    "            #                 \"query\": state[\"messages\"][-1].tool_calls[0][\"args\"][\n",
-    "            #                     \"search_queries\"\n",
-    "            #                 ][0]\n",
-    "            #             }\n",
-    "            #         )\n",
-    "            #     ),\n",
-    "            # ),\n",
-    "        ]\n",
-    "    }\n",
-    ")}\n",
+    "        if tool_calls[0][\"name\"] == ToDocRetrieval.name:\n",
+    "            return \"enter_doc_retrieval\"\n",
+    "        if tool_calls[0][\"name\"] == ToOrderManagement.name:\n",
+    "            return \"enter_order_management\"\n",
+    "        if tool_calls[0][\"name\"] == ToFoodSearch.name:\n",
+    "            return \"enter_search_food\"\n",
+    "        if tool_calls[0][\"name\"] == ToSuggestionFood.name:\n",
+    "            return \"enter_suggestion_food\"\n",
+    "        \n",
+    "        return \"primary_assistant_tools\"\n",
+    "    return END\n",
     "\n",
     "\n",
-    "builder = StateGraph(State)\n",
-    "builder.add_node(\"draft\", draft_node)\n",
-    "builder.add_node(\"revisor\", revisor_node)\n",
-    "builder.add_node(\"execute_tools\", tool_node)\n",
-    "builder.add_edge(\"__start__\", \"draft\")\n",
     "\n",
-    "builder.add_edge(\"draft\", \"execute_tools\")\n",
+    "def route_management_assistant(\n",
+    "    state: State,\n",
+    "):  \n",
+    "    if hasattr(state[\"messages\"][-1], \"tool_calls\") and state[\"messages\"][-1].tool_calls:\n",
+    "        tool_calls = state[\"messages\"][-1].tool_calls\n",
+    "    else:\n",
+    "        tool_calls = None\n",
     "\n",
-    "builder.add_edge(\"execute_tools\", \"revisor\")\n",
-    "builder.add_conditional_edges(\"revisor\", route_food_suggestion, [END, \"execute_tools\"])\n",
-    "builder.add_edge(START, \"draft\")\n",
+    "    if tool_calls:\n",
+    "        did_cancel = any(tc[\"name\"] == CompleteOrEscalate.__name__ for tc in tool_calls)\n",
+    "        if did_cancel:\n",
+    "            return \"leave_skill\"\n",
+    "    return END\n",
     "\n",
-    "part_5_graph = builder.compile()\n",
+    "\n",
+    "\n",
+    "builder = StateGraph(State) \n",
+    "# Primary assistant\n",
+    "builder.add_node(\"primary_assistant\", Assistant(assistant_runnable))\n",
+    "builder.add_node(\"fetch_user_info\", user_info)\n",
+    "builder.add_edge(START, \"fetch_user_info\")\n",
+    "builder.add_node(\"leave_skill\", leave_skill)\n",
+    "builder.add_node(\"summarize_conversation\", summarize_conversation)\n",
+    "builder.add_edge(\"summarize_conversation\", \"primary_assistant\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "builder.add_node(\"doc_retrieval\", part_1_graph)\n",
+    "builder.add_node(\"order_management\", part_2_graph)\n",
+    "builder.add_node(\n",
+    "    \"primary_assistant_tools\", create_tool_node_with_fallback(primary_assistant_tools)\n",
+    ")\n",
+    "\n",
+    "# Doc retrieval assistant\n",
+    "builder.add_node(\n",
+    "    \"enter_doc_retrieval\",\n",
+    "    create_entry_node(\"Doc Retrieval Assistant\", \"doc_retrieval\"),\n",
+    ")\n",
+    "builder.add_node(\n",
+    "    \"enter_order_management\",\n",
+    "    create_entry_node(\"Order Management Assistant\", \"order_management\"),\n",
+    ")\n",
+    "builder.add_edge(\"enter_doc_retrieval\", \"doc_retrieval\")\n",
+    "builder.add_edge(\"enter_order_management\", \"order_management\")\n",
+    "\n",
+    "builder.add_conditional_edges(\n",
+    "    \"primary_assistant\",\n",
+    "    route_primary_assistant,\n",
+    "    [\n",
+    "        \"enter_doc_retrieval\",\n",
+    "        \"enter_order_management\",\n",
+    "        \"enter_search_food\",\n",
+    "        \"primary_assistant_tools\",\n",
+    "        \"enter_suggestion_food\",\n",
+    "        END\n",
+    "    ],\n",
+    ")\n",
+    "builder.add_edge(\"primary_assistant_tools\", \"primary_assistant\")\n",
+    "\n",
+    "builder.add_conditional_edges(\"order_management\",route_management_assistant, [\"leave_skill\", END] )\n",
+    "\n",
+    "# builder.add_edge(\"doc_retrieval\", \"leave_skill\")\n",
+    "\n",
+    "builder.add_conditional_edges(\"fetch_user_info\", should_summarize, [\"primary_assistant\", \"summarize_conversation\"])\n",
+    "builder.add_edge(\"leave_skill\", \"primary_assistant\")\n",
+    "\n",
+    "\n",
+    "builder.add_node(\"search_food\", part_3_graph)\n",
+    "\n",
+    "builder.add_node(\n",
+    "    \"enter_search_food\",\n",
+    "    create_entry_node(\"Search Food Assistant\", \"search_food\"),\n",
+    ")\n",
+    "builder.add_edge(\"enter_search_food\", \"search_food\")\n",
+    "builder.add_conditional_edges(\"search_food\",route_management_assistant, [\"leave_skill\", END] )\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "builder.add_node(\"suggest_food\", part_5_graph)\n",
+    "\n",
+    "builder.add_node(\n",
+    "    \"enter_suggestion_food\",\n",
+    "    create_entry_node(\"Food Suggestion Assistant\", \"suggest_food\"),\n",
+    ")\n",
+    "builder.add_edge(\"enter_suggestion_food\", \"suggest_food\")\n",
+    "builder.add_conditional_edges(\"suggest_food\",route_management_assistant, [\"leave_skill\", END] )\n",
+    "\n",
+    "\n",
+    "memory = MemorySaver()\n",
+    "supergraph = builder.compile(checkpointer=memory)\n",
     "\n",
     "from IPython.display import Image, display\n",
     "\n",
     "try:\n",
-    "    display(Image(part_5_graph.get_graph(xray=True).draw_mermaid_png()))\n",
+    "    display(Image(supergraph.get_graph(xray=True).draw_mermaid_png()))\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "    # This requires some extra dependencies and is optional\n",
